Consistent use of Path